<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="?android:windowBackground">

    <TextView
        android:id="@+id/game_over_text"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:text="@string/game_over"
        android:textSize="30sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/game_over_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/game_over_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="56dp"
        android:contentDescription="@string/game_over_image"
        android:src="@drawable/ic_rocket"
        app:layout_constraintBottom_toTopOf="@+id/try_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_over_text"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/try_again"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:text="@string/try_again"
        app:layout_constraintBottom_toTopOf="@+id/main_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/main_menu"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:text="@string/main_menu"
        app:layout_constraintBottom_toTopOf="@+id/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/settings"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>